--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,36 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-
-  font-weight: normal;
+	margin: 0 auto;
+	padding: 2em;
+	font-weight: normal;
 }
-
 a,
 .green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
+	text-decoration: none;
+	color: var(--green);
+	transition: 0.4s;
 }
 
 @media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+	a:hover {
+		background-color: hsla(160, 100%, 37%, 0.2);
+	}
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
+@media (min-width: 1280px) {
+	body {
+		width: 1280px;
+		display: flex;
+		place-items: center;
+		margin: auto;
+	}
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+	#app {
+		width: 1280px;
+		display: grid;
+		grid-template-columns: 0.8fr 1fr;
+		padding: 1em 2em;
+		gap: 2em;
+	}
 }
