--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14,7 +14,8 @@ a,
 
 @media (hover: hover) {
 	a:hover {
-		background-color: hsla(160, 100%, 37%, 0.2);
+		background-color: var(--hover-bg);
+		color: var(--hover-text);
 	}
 }
 
